<resources>
    <string name="app_name">Anime manager</string>
    <string name="loginButtonText">Log in</string>
    <string name="loginTitle">Gimme finger</string>
    <string name="loginSubtitle">Log in using your fingerprint</string>
    <string name="editTextTitle">Search anime…</string>
    <string name="episodesTitle">Episodes</string>
    <string name="meanScoreTitle">Score</string>
    <string name="statusTitle">Status</string>
    <string name="animestatusSample">animeStatus</string>
    <string name="animescoreSample">animeScore</string>
    <string name="animeepisodesSample">animeEpisodes</string>
    <string name="animetitleSample">animeTitle</string>
    <string name="anime_imageSample">Anime image</string>
    <string name="SampleImage">https://cdn.discordapp.com/attachments/779026898672025684/1121426346061606992/HeKillYou.png</string>
    <string name="SearchingSwitchButtonText">Manager</string>
    <string name="DatabaseSwitchButtonText">Searching</string>
    <string name="editAnimeButtonText">Save</string>
    <string name="removeButtonText">-1</string>
    <string name="addButtonText">+1</string>
    <string name="sampleNumber">123</string>
</resources>